[gd_scene load_steps=11 format=2]

[ext_resource path="res://Game_FoodEater/Scripts/FoodEaterGame.gd" type="Script" id=1]
[ext_resource path="res://Assets/Backgrounds/foodeater_background.png" type="Texture" id=2]
[ext_resource path="res://Game_FoodEater/Scripts/FoodEaterGridVisualizer.gd" type="Script" id=3]
[ext_resource path="res://Assets/Sprites/snake_body.png" type="Texture" id=4]
[ext_resource path="res://Game_FoodEater/Scenes/FoodArea.tscn" type="PackedScene" id=5]
[ext_resource path="res://Game_FoodEater/Scenes/Frog.tscn" type="PackedScene" id=6]
[ext_resource path="res://Assets/Sounds/eat.wav" type="AudioStream" id=7]
[ext_resource path="res://Game_FoodEater/Scenes/FoodEaterUI.tscn" type="PackedScene" id=8]
[ext_resource path="res://Game_FoodEater/Scenes/SnakeBody.tscn" type="PackedScene" id=9]

[sub_resource type="RectangleShape2D" id=1]
extents = Vector2( 20, 20 )

[node name="Game" type="Node2D"]
script = ExtResource( 1 )
__meta__ = {
"_edit_group_": true,
"_edit_lock_": true
}

[node name="Background" type="Sprite" parent="."]
texture = ExtResource( 2 )
centered = false
__meta__ = {
"_edit_lock_": true
}

[node name="Grid" type="TileMap" parent="."]
editor/display_folded = true
position = Vector2( 20, 20 )
cell_size = Vector2( 40, 40 )
format = 1
__meta__ = {
"_edit_group_": true,
"_edit_lock_": true
}

[node name="GridVisualizer" type="Node2D" parent="Grid"]
script = ExtResource( 3 )
__meta__ = {
"_edit_lock_": true
}

[node name="Walls" type="Node2D" parent="."]
editor/display_folded = true
__meta__ = {
"_edit_group_": true,
"_edit_lock_": true
}

[node name="LeftWall" type="StaticBody2D" parent="Walls"]
editor/display_folded = true

[node name="WallSprite" type="Sprite" parent="Walls/LeftWall"]

[node name="CollisionPolygon2D" type="CollisionPolygon2D" parent="Walls/LeftWall"]
polygon = PoolVector2Array( 0, 680, 0, 0, 20, 0, 20, 680 )

[node name="RightWall" type="StaticBody2D" parent="Walls"]
editor/display_folded = true
position = Vector2( 660, 0 )

[node name="WallSprite" type="Sprite" parent="Walls/RightWall"]

[node name="CollisionPolygon2D" type="CollisionPolygon2D" parent="Walls/RightWall"]
polygon = PoolVector2Array( 0, 680, 0, 0, 20, 0, 20, 680 )

[node name="UpWall" type="StaticBody2D" parent="Walls"]
editor/display_folded = true

[node name="WallSprite" type="Sprite" parent="Walls/UpWall"]

[node name="WallCollision" type="CollisionPolygon2D" parent="Walls/UpWall"]
polygon = PoolVector2Array( 20, 0, 660, 0, 660, 20, 20, 20 )

[node name="DownWall" type="StaticBody2D" parent="Walls"]
editor/display_folded = true
position = Vector2( 0, 660 )

[node name="WallSprite" type="Sprite" parent="Walls/DownWall"]

[node name="WallCollision" type="CollisionPolygon2D" parent="Walls/DownWall"]
polygon = PoolVector2Array( 20, 0, 660, 0, 660, 20, 20, 20 )

[node name="Obstacles" type="Node2D" parent="."]
editor/display_folded = true
visible = false
__meta__ = {
"_edit_group_": true,
"_edit_lock_": true
}

[node name="Obstacle" type="StaticBody2D" parent="Obstacles"]
editor/display_folded = true
position = Vector2( 600, 80 )
__meta__ = {
"_edit_group_": true
}

[node name="ObstacleSprite" type="Sprite" parent="Obstacles/Obstacle"]
scale = Vector2( 1.11, 1.11 )
texture = ExtResource( 4 )

[node name="ObstacleShape" type="CollisionShape2D" parent="Obstacles/Obstacle"]
shape = SubResource( 1 )
disabled = true

[node name="Obstacle2" type="StaticBody2D" parent="Obstacles"]
editor/display_folded = true
position = Vector2( 120, 120 )
__meta__ = {
"_edit_group_": true
}

[node name="ObstacleSprite" type="Sprite" parent="Obstacles/Obstacle2"]
scale = Vector2( 1.11, 1.11 )
texture = ExtResource( 4 )

[node name="ObstacleShape" type="CollisionShape2D" parent="Obstacles/Obstacle2"]
shape = SubResource( 1 )
disabled = true

[node name="Obstacle3" type="StaticBody2D" parent="Obstacles"]
editor/display_folded = true
position = Vector2( 440, 480 )
__meta__ = {
"_edit_group_": true
}

[node name="ObstacleSprite" type="Sprite" parent="Obstacles/Obstacle3"]
scale = Vector2( 1.11, 1.11 )
texture = ExtResource( 4 )

[node name="ObstacleShape" type="CollisionShape2D" parent="Obstacles/Obstacle3"]
shape = SubResource( 1 )
disabled = true

[node name="Obstacle4" type="StaticBody2D" parent="Obstacles"]
editor/display_folded = true
position = Vector2( 40, 560 )
__meta__ = {
"_edit_group_": true
}

[node name="ObstacleSprite" type="Sprite" parent="Obstacles/Obstacle4"]
scale = Vector2( 1.11, 1.11 )
texture = ExtResource( 4 )

[node name="ObstacleShape" type="CollisionShape2D" parent="Obstacles/Obstacle4"]
shape = SubResource( 1 )
disabled = true

[node name="Obstacle5" type="StaticBody2D" parent="Obstacles"]
editor/display_folded = true
position = Vector2( 440, 560 )
__meta__ = {
"_edit_group_": true
}

[node name="ObstacleSprite" type="Sprite" parent="Obstacles/Obstacle5"]
scale = Vector2( 1.11, 1.11 )
texture = ExtResource( 4 )

[node name="ObstacleShape" type="CollisionShape2D" parent="Obstacles/Obstacle5"]
shape = SubResource( 1 )
disabled = true

[node name="Obstacle6" type="StaticBody2D" parent="Obstacles"]
editor/display_folded = true
position = Vector2( 200, 440 )
__meta__ = {
"_edit_group_": true
}

[node name="ObstacleSprite" type="Sprite" parent="Obstacles/Obstacle6"]
scale = Vector2( 1.11, 1.11 )
texture = ExtResource( 4 )

[node name="ObstacleShape" type="CollisionShape2D" parent="Obstacles/Obstacle6"]
shape = SubResource( 1 )
disabled = true

[node name="Obstacle7" type="StaticBody2D" parent="Obstacles"]
editor/display_folded = true
position = Vector2( 520, 200 )
__meta__ = {
"_edit_group_": true
}

[node name="ObstacleSprite" type="Sprite" parent="Obstacles/Obstacle7"]
scale = Vector2( 1.11, 1.11 )
texture = ExtResource( 4 )

[node name="ObstacleShape" type="CollisionShape2D" parent="Obstacles/Obstacle7"]
shape = SubResource( 1 )
disabled = true

[node name="Obstacle8" type="StaticBody2D" parent="Obstacles"]
editor/display_folded = true
position = Vector2( 240, 440 )
__meta__ = {
"_edit_group_": true
}

[node name="ObstacleSprite" type="Sprite" parent="Obstacles/Obstacle8"]
scale = Vector2( 1.11, 1.11 )
texture = ExtResource( 4 )

[node name="ObstacleShape" type="CollisionShape2D" parent="Obstacles/Obstacle8"]
shape = SubResource( 1 )
disabled = true

[node name="Obstacle9" type="StaticBody2D" parent="Obstacles"]
editor/display_folded = true
position = Vector2( 480, 240 )
__meta__ = {
"_edit_group_": true
}

[node name="ObstacleSprite" type="Sprite" parent="Obstacles/Obstacle9"]
scale = Vector2( 1.11, 1.11 )
texture = ExtResource( 4 )

[node name="ObstacleShape" type="CollisionShape2D" parent="Obstacles/Obstacle9"]
shape = SubResource( 1 )
disabled = true

[node name="Obstacle10" type="StaticBody2D" parent="Obstacles"]
editor/display_folded = true
position = Vector2( 280, 200 )
__meta__ = {
"_edit_group_": true
}

[node name="ObstacleSprite" type="Sprite" parent="Obstacles/Obstacle10"]
scale = Vector2( 1.11, 1.11 )
texture = ExtResource( 4 )

[node name="ObstacleShape" type="CollisionShape2D" parent="Obstacles/Obstacle10"]
shape = SubResource( 1 )
disabled = true

[node name="Obstacle11" type="StaticBody2D" parent="Obstacles"]
editor/display_folded = true
position = Vector2( 280, 160 )
__meta__ = {
"_edit_group_": true
}

[node name="ObstacleSprite" type="Sprite" parent="Obstacles/Obstacle11"]
scale = Vector2( 1.11, 1.11 )
texture = ExtResource( 4 )

[node name="ObstacleShape" type="CollisionShape2D" parent="Obstacles/Obstacle11"]
shape = SubResource( 1 )
disabled = true

[node name="Obstacle12" type="StaticBody2D" parent="Obstacles"]
editor/display_folded = true
position = Vector2( 160, 360 )
__meta__ = {
"_edit_group_": true
}

[node name="ObstacleSprite" type="Sprite" parent="Obstacles/Obstacle12"]
scale = Vector2( 1.11, 1.11 )
texture = ExtResource( 4 )

[node name="ObstacleShape" type="CollisionShape2D" parent="Obstacles/Obstacle12"]
shape = SubResource( 1 )
disabled = true

[node name="Obstacle13" type="StaticBody2D" parent="Obstacles"]
editor/display_folded = true
position = Vector2( 520, 520 )
__meta__ = {
"_edit_group_": true
}

[node name="ObstacleSprite" type="Sprite" parent="Obstacles/Obstacle13"]
scale = Vector2( 1.11, 1.11 )
texture = ExtResource( 4 )

[node name="ObstacleShape" type="CollisionShape2D" parent="Obstacles/Obstacle13"]
shape = SubResource( 1 )
disabled = true

[node name="Obstacle14" type="StaticBody2D" parent="Obstacles"]
editor/display_folded = true
position = Vector2( 160, 440 )
__meta__ = {
"_edit_group_": true
}

[node name="ObstacleSprite" type="Sprite" parent="Obstacles/Obstacle14"]
scale = Vector2( 1.11, 1.11 )
texture = ExtResource( 4 )

[node name="ObstacleShape" type="CollisionShape2D" parent="Obstacles/Obstacle14"]
shape = SubResource( 1 )
disabled = true

[node name="Obstacle15" type="StaticBody2D" parent="Obstacles"]
editor/display_folded = true
position = Vector2( 280, 480 )
__meta__ = {
"_edit_group_": true
}

[node name="ObstacleSprite" type="Sprite" parent="Obstacles/Obstacle15"]
scale = Vector2( 1.11, 1.11 )
texture = ExtResource( 4 )

[node name="ObstacleShape" type="CollisionShape2D" parent="Obstacles/Obstacle15"]
shape = SubResource( 1 )
disabled = true

[node name="Obstacle16" type="StaticBody2D" parent="Obstacles"]
editor/display_folded = true
position = Vector2( 200, 40 )
__meta__ = {
"_edit_group_": true
}

[node name="ObstacleSprite" type="Sprite" parent="Obstacles/Obstacle16"]
scale = Vector2( 1.11, 1.11 )
texture = ExtResource( 4 )

[node name="ObstacleShape" type="CollisionShape2D" parent="Obstacles/Obstacle16"]
shape = SubResource( 1 )
disabled = true

[node name="Obstacle17" type="StaticBody2D" parent="Obstacles"]
editor/display_folded = true
position = Vector2( 320, 640 )
__meta__ = {
"_edit_group_": true
}

[node name="ObstacleSprite" type="Sprite" parent="Obstacles/Obstacle17"]
scale = Vector2( 1.11, 1.11 )
texture = ExtResource( 4 )

[node name="ObstacleShape" type="CollisionShape2D" parent="Obstacles/Obstacle17"]
shape = SubResource( 1 )
disabled = true

[node name="Obstacle18" type="StaticBody2D" parent="Obstacles"]
editor/display_folded = true
position = Vector2( 480, 40 )
__meta__ = {
"_edit_group_": true
}

[node name="ObstacleSprite" type="Sprite" parent="Obstacles/Obstacle18"]
scale = Vector2( 1.11, 1.11 )
texture = ExtResource( 4 )

[node name="ObstacleShape" type="CollisionShape2D" parent="Obstacles/Obstacle18"]
shape = SubResource( 1 )
disabled = true

[node name="Obstacle19" type="StaticBody2D" parent="Obstacles"]
editor/display_folded = true
position = Vector2( 560, 360 )
__meta__ = {
"_edit_group_": true
}

[node name="ObstacleSprite" type="Sprite" parent="Obstacles/Obstacle19"]
scale = Vector2( 1.11, 1.11 )
texture = ExtResource( 4 )

[node name="ObstacleShape" type="CollisionShape2D" parent="Obstacles/Obstacle19"]
shape = SubResource( 1 )
disabled = true

[node name="Obstacle20" type="StaticBody2D" parent="Obstacles"]
editor/display_folded = true
position = Vector2( 560, 480 )
__meta__ = {
"_edit_group_": true
}

[node name="ObstacleSprite" type="Sprite" parent="Obstacles/Obstacle20"]
scale = Vector2( 1.11, 1.11 )
texture = ExtResource( 4 )

[node name="ObstacleShape" type="CollisionShape2D" parent="Obstacles/Obstacle20"]
shape = SubResource( 1 )
disabled = true

[node name="FoodArea" parent="." instance=ExtResource( 5 )]
position = Vector2( 41, 40 )

[node name="Frog" parent="." instance=ExtResource( 6 )]
visible = false
position = Vector2( 80, 40 )

[node name="ResetTimer" type="Timer" parent="."]
one_shot = true

[node name="AudioStreamPlayer" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 7 )

[node name="UI" parent="." instance=ExtResource( 8 )]

[node name="SnakePosition" type="Position2D" parent="."]
position = Vector2( 120, 320 )
__meta__ = {
"_edit_lock_": true
}

[node name="SnakeBody" parent="." instance=ExtResource( 9 )]
position = Vector2( 120, 320 )
[connection signal="area_entered" from="FoodArea" to="SnakeBody" method="_on_FoodArea_area_entered"]
[connection signal="timeout" from="ResetTimer" to="." method="_on_ResetTimer_timeout"]
